--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,4 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 9600
-lib_deps = adafruit/Adafruit PN532@^1.3.3
+lib_deps = adafruit/Adafruit PN532@1.3.2
